--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "server": "node-env-run server --exec nodemon",
     "dev": "run-p server start"
   },
-  "proxy": "http://garage-app:5000",
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
